[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI/PieceList/PieceListItem.gd" type="Script" id=1]
[ext_resource path="res://GUI/Theme/Theme.tres" type="Theme" id=2]
[ext_resource path="res://World/Tower/Pieces/StoneCutter/stonecutter.png" type="Texture" id=3]

[node name="PieceListItem" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -176.0
margin_bottom = -296.0
rect_min_size = Vector2( 96, 24 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -7.62939e-06
margin_bottom = -42.0
rect_min_size = Vector2( 72, 24 )
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Button"]
modulate = Color( 0.0627451, 0.0627451, 0.141176, 1 )
margin_left = 20.3293
margin_top = 3.7123
margin_right = 92.3293
margin_bottom = 12.7123
text = "stone cutter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmountPossible" type="Label" parent="Button"]
modulate = Color( 0.0627451, 0.0627451, 0.141176, 1 )
margin_left = 20.0063
margin_top = 11.1012
margin_right = 41.0063
margin_bottom = 20.1012
text = "5x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image" type="TextureRect" parent="Button"]
margin_left = 3.12053
margin_top = 4.11893
margin_right = 19.1205
margin_bottom = 20.1189
rect_min_size = Vector2( 0, 16 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
